<resources>
  <string name="app_name">TheWeatherApp</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="symbol_grade">°</string>
  <string name="pressure">Pressure: %s, hPa</string>
  <string name="humidity">Humidity: %s, %</string>
  <string name="wind">Wind: %s, meter/sec</string>
  <string name="find_city">Find city</string>
  <string name="sensors">Sensors</string>
  <string name="use_geo">Use geo</string>
  <string name="send">send</string>
  <string name="empty_input">Empty input</string>
  <string name="server_is_not_responding">City don\'t found or server isn\'t responding</string>
  <string name="does_not_have_sensors">You doesn\'t have any sensors</string>
  <string name="coordinates_invalid">Coordinates are invalid</string>
  <string name="welcome">This is a first activity run, please open the nav menu</string>
  <string name="find_a_city">Find a city</string>
  <string name="use_sensors">Use sensors</string>
  <string name="use_geo_location">Use geo location</string>
</resources>
