<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <Button
      android:id="@+id/find_city"
      android:text="@string/find_city"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:theme="@style/MyButton"
      />

  <Button
      android:id="@+id/sensors"
      android:text="@string/sensors"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:theme="@style/MyButton"
      />

  <Button
      android:id="@+id/use_geo"
      android:text="@string/use_geo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:theme="@style/MyButton"
      />

</LinearLayout>