<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout_med"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_small"
        android:src="@drawable/d10"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

      <TextView
          android:id="@+id/header_city_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="#3a3939"
          android:textSize="@dimen/header_city_name_size"
          android:textStyle="bold"
          tools:text="Moscow"
          />

      <TextView
          android:id="@+id/header_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="#625d5d"
          tools:text="Friday, 25 June"
          />
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/tem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_tem_size"
        android:textStyle="bold"
        tools:text="31"
        />

    <TextView
        android:id="@+id/symbol_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/symbol_grade"
        android:textColor="@color/colorPrimary"
        android:textSize="70sp"
        android:textStyle="bold"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/pressure"
        />

    <TextView
        android:id="@+id/hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/humidity"
        />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/wind"
        />
  </LinearLayout>

</LinearLayout>